k8s/graphdb/graphdb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphdb
spec:
  replicas: 1
  strategy:
    type: Recreate # See https://stackoverflow.com/a/62230273
  selector:
    matchLabels:
      app: graphdb
  template:
    metadata:
      labels:
        app: graphdb
    spec:
      containers:
        - name: database
          image: ghcr.io/netwerk-digitaal-erfgoed/graphdb:9.5.0-free
          resources:
            requests:
              memory: 1.5Gi
            limits:
              memory: 3Gi
          volumeMounts:
            - mountPath: "/opt/graphdb/home"
              name: graphdb
          ports:
            - containerPort: 7200
      imagePullSecrets:
        - name: ghcr
      volumes:
        - name: graphdb
          persistentVolumeClaim:
            claimName: graphdb
