k8s/graphdb/graphdb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: graphdb
spec:
  ports:
    - port: 80
      targetPort: 7200
  selector:
    app: graphdb
