k8s/graphdb/graphdb-redirect.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphdb-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://triplestore.netwerkdigitaalerfgoed.nl
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - graphdb.ddeboer.nl
      secretName: graphdb-redirect-tls
  rules:
    - host: graphdb.ddeboer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graphdb
                port:
                  number: 80
